# ui-mongo-fastapi

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
config/: settings.toml
scripts/: .gitignore  deps-dn.sh  deps-up.sh  podman-dn.sh  podman-up.sh
src/sample_module/: __main__.py  sample.py
src/test/: conftest.py  test_config.py  test_intg_api.py  test_intg_metrics.py  test_sample.py
src/ui_mongo/: __main__.py  api.py  config.py  globals.py  metrics.py
src/ui_mongo/repositories/: job_activity.py
src/ui_mongo/routers/: health.py  job_activity.py
