[tool.poetry]
name = "ui_mongo"
version = "0.1.0"
description = "A FastAPI app for learning how to use mongodb"
authors = ["Michael Penhallegon <mike@hematite.tech>"]
license = "Apache-2"
packages = [
    {include="ui_mongo", from="src", format="wheel"}
]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.37.0"
dynaconf = "^3.1.9"
fastapi = "^0.79.0"
motor = "^3.0.0"
uvicorn = "^0.18.2"
prometheus-client = "^0.14.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
ipdb = "^0.13.9"
yapf = "^0.31.0"
flake8 = "^5.0.1"
pytest = "^6.2.5"
tox = "rewrite"
mypy = "^0.910"
safety = "^1.10.3"
pytest-asyncio = "^0.19.0"
mongomock-motor = "^0.0.12"
async-asgi-testclient = "^1.4.11"
pytest-dotenv = "^0.5.2"
black = "^22.6.0"
Flake8-pyproject = "^1.1.0"

[tool.flake8]
max-line-length=120
extend-ignore=["E111"]

[tool.isort]
line_length=120
force_single_line=true
src_paths=["src/ui_mongo", "src/ui_mongo"]

[tool.mypy]
python_version="3.8"
exclude="venv*"

[[tool.mypy.overrides]]
module = [
    "dynaconf",
    "uvicorn",
    "motor",
    "motor.motor_asyncio"
]
ignore_missing_imports=true

[tool.pytest.ini_options]
markers =  [
    "integration",
    ]
norecursedirs=["scripts/*"]
asyncio_mode = "auto"

[tool.yapf]
based_on_style="google"
ident_width=2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
